--- a/index.html
+++ b/index.html
@@ -261,106 +261,48 @@
 			var rB = [0, 0];
 
 			console.log('manifold i:' + this.manifold['i']);
-			if(this.manifold['i'] < 2){
-				//reference on A, calculate rA rB from B
-				/*
-				var Bvertices = [
-					rot(this.S[1].q[2], [this.S[1].w/2, this.S[1].h/2]),
-					rot(this.S[1].q[2], [-this.S[1].w/2, this.S[1].h/2]),
-					rot(this.S[1].q[2], [-this.S[1].w/2, -this.S[1].h/2]),
-					rot(this.S[1].q[2], [this.S[1].w/2, -this.S[1].h/2])
-				];
 
-				console.log('vertices:');
-				console.log(Bvertices);
+			var k;
+			if(this.manifold['i'] < 2){ k = 1; } else { k = 0; }
 
-				var maxdot = 0; var maxi = 0;
-				var dot = 0;				
-				for(var i = 0; i < 4; ++i){
-					dot = -numeric['dot'](Bvertices[i], this.manifold['n']);
-					if(dot > maxdot){ maxdot = dot; maxi = i; }
-				}
-
-				rB = Bvertices[maxi];
-				rA = numeric['+'](d, rB);
-
-				console.log('rA:');
-				console.log(rA);
-
-				console.log('rB:');
-				console.log(rB);
-				*/
-			} else {
-				//reference on B, calculate rA rB from A
-
-				var Avertices = [
-					rot(this.S[0].q[2], [this.S[0].w/2, this.S[0].h/2]),
-					rot(this.S[0].q[2], [-this.S[0].w/2, this.S[0].h/2]),
-					rot(this.S[0].q[2], [-this.S[0].w/2, -this.S[0].h/2]),
-					rot(this.S[0].q[2], [this.S[0].w/2, -this.S[0].h/2])
-				];
-
-				console.log('vertices:');
-				console.log(Avertices);
-
-				var maxdot = 0; var maxi = 0;
-				var dot = 0;				
-				for(var i = 0; i < 4; ++i){
-					dot = numeric['dot'](Avertices[i], this.manifold['n']);
-					if(dot > maxdot){ maxdot = dot; maxi = i; }
-				}
-
-				rA = Avertices[maxi];
-				rB = numeric['-'](d, rA);
-
-				console.log('rA:');
-				console.log(rA);
-
-				console.log('rB:');
-				console.log(rB);
-
-			}
-
-
-
-
-			
-
-			var numer = -(1+e)*numeric['dot'](vAB, this.manifold['n']);
-
-			var rAdotN = numeric['dot'](rA, this.manifold['n']);
-			var rBdotN = numeric['dot'](rB, this.manifold['n']);
-
-			var denum = (
-			(this.S[0].invm+this.S[1].invm) +
-			rAdotN*rAdotN/this.S[0].invm +
-			rBdotN*rBdotN/this.S[1].invm
-			);
-
-			var j = numer/denum;
-
-			var J = 
-			[
-				j*this.manifold['n'][0]/dt,
-				j*this.manifold['n'][1]/dt,
-				0,
+			//select contact point.
+			var vertices = [
+				rot(this.S[k].q[2], [this.S[k].w/2, this.S[k].h/2]),
+				rot(this.S[k].q[2], [-this.S[k].w/2, this.S[k].h/2]),
+				rot(this.S[k].q[2], [-this.S[k].w/2, -this.S[k].h/2]),
+				rot(this.S[k].q[2], [this.S[k].w/2, -this.S[k].h/2])
 			];
 
-			
-			console.log('J:');
-			console.log(J);
+			console.log('vertices:');
+			console.log(vertices);
 
+			var maxdot = 0; var maxi = 0;
+			var dot = 0;
 
-			this.S[0].qprev = numeric['-'](this.S[0].q,
-				numeric['+'](numeric['*']([v0A[0], v0A[1], w0A], dt), J)
-			);
+			var sign = (k ? -1: 1);
 
-			console.log(this.S[0]);
+			for(var i = 0; i < 4; ++i){
+				dot = sign*numeric['dot'](vertices[i], this.manifold['n']);
+				if(dot > maxdot){ maxdot = dot; maxi = i; }
+			}
 
-			this.S[1].qprev = numeric['-'](this.S[1].q,
-				numeric['-'](numeric['*']([v0B[0], v0B[1], w0B], dt), J)
-			);
-			
+			if(k){
+				console.log('UP HERE');
+				rB = vertices[maxi];
+				rA = numeric['+'](d, rB);
+			} else {
+				rA = vertices[maxi];
+				rB = numeric['-'](rA, d);
+			}
+
+			//acquire rA rB.
+
+			console.log('rA:');
+			console.log(rA);
+
+			console.log('rB:');
+			console.log(rB);
+
 		}
 
 
@@ -505,7 +447,7 @@
 			//demo_chain();
 
 
-			B[blabel] = new box(blabel, 1, 40, 40, [300, 300, 0.1], [80, 80, 0]); ++blabel;
+			B[blabel] = new box(blabel, 1, 40, 40, [300, 300, 0.2], [80, 80, 0]); ++blabel;
 			B[blabel] = new box(blabel, 1, 60, 60, [500, 300, 0], [0, 80, 0]); ++blabel;
 
 
